[package]
name = "pushtag"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5"
serde_json = "1.0.79"
thiserror = "1.0.30"
git2 = "0.14.2"
clap = { version = "3.1.6", features = ["derive"] }